--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -8,9 +8,16 @@
 <body>
     <div class="login-container">
         <div class="login-box">
-            <img src="/Assets/govlogo.png" alt="Logo" class="logo">
-            <h2 class="title">नागार्जुन नगरपालिका</h2>
-            <p class="subtitle">नगर कार्यपालिकाको कार्यालय, काठमाडौं</p>
+            <!-- START of Logo + Title Flexbox -->
+            <div class="header">
+                <img src="/Assets/govlogo.png" alt="Logo" class="logo">
+                <div class="title-text">
+                    <h2 class="title">नागार्जुन नगरपालिका</h2>
+                    <p class="subtitle">नगर कार्यपालिकाको कार्यालय, काठमाडौं</p>
+                </div>
+            </div>
+            <!-- END of Header Flexbox -->
+
             <form>
                 <input type="text" placeholder="प्रयोगकर्ताको नाम प्रविष्ट गर्नुहोस्">
                 <input type="password" placeholder="पासवर्ड प्रविष्ट गर्नुहोस्">
